# food_chatbot

./: .gitignore  README.md  initial_test.py
api/: dockerfile  main.py
api_intro/: dockerfile  main.py  sentence_tokenizer.pickle
chatbot/: settings.py  urls.py
flask_recipe/: .flaskenv  .~lock.test.csv#  boot.sh  constants.py  db.csv  docker-compose.yaml  dockerfile  form.py  initial_test.py  main.py  pyproject.toml  requirements.txt  sentence_tokenizer.pickle  test.csv  tst.py
flask_recipe/api/: main.py  requirements.txt  sentence_tokenizer.pickle
flask_recipe/app/: __init__.py  functions.py  routes.py
flask_recipe/app/chat/: routes.py
flask_recipe/app/intro/: routes.py
flask_recipe/app/query/: __init__.py  functions.py  routes.py
flask_recipe/app/templates/: base.html  chat.html  index.html  none.html  recipe.html  result.html
flask_recipe/templates/: base.html  full.html  index.html  recipe.html  result.html
query/: forms.py  models.py  urls.py  views.py
query/migrations/: 0001_initial.py
query/templates/query/: post_edit.htm  query_chatbot.html
