[tool.poetry]
name = "flask-recipe"
version = "0.1.0"
description = ""
authors = ["Ewart J Sheldon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flask-wtf = "^1.1.1"
flask = "^2.3.3"
pandas = "^2.0.3"
certifi = "^2023.7.22"
attrs = "^23.1.0"
cffi = "^1.15.1"
iniconfig = "^2.0.0"
intel-openmp = "^2023.2.0"
joblib = "^1.3.2"
mkl = "^2023.2.0"
torch = "^2.0.1"
transformers = "^4.32.1"
numpy = "^1.25.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
